2009-11-16  Rob McMullen  <robm@users.sourceforge.net>

	* Released peppy-0.13.1
	* fixed replace to stop after wrapping around to start (bug #471)
	* fixed bug when searching for non-existent CTAG (bug #753)
	* fixed bug in help browser when doc doesn't exist (bug #797)
	* added m4 major mode
	* fixed bug in bash-style completion (bug #796)
	* changed version numbering scheme to incremental minor numbers rather
	than git-based minor numbers

2009-11-11  Rob McMullen  <robm@users.sourceforge.net>

	* Released peppy-0.13.0 "Odyssey and Aquarius"
	* added help viewer and included htmlhelp version of user manual
	* added experimental webdav support for network file access (bug #230)
	* added insert file action (bug #430)
	* added copy of user manual to peppy (bug #787)
	* added reStructuredText mode
	* fixed bug in STC highlight color logic (bug #789)
	* changed list mode to use alternating background colors
	* added printing support for list mode and dired mode
	* fixed bug where files were getting opened twice during load (bug #792)
	* fixed GTK keystroke for undo/redo actions (bug #764)
	* fixed reindent bug in Makefile mode (bug #784)
	* fixed bug in project settings dialog (bug #794)

2009-10-01  Rob McMullen  <robm@users.sourceforge.net>

	* Released peppy-0.12.19
	* added printing and print preview support
	* fixed install problems on windows (bug #782)

2009-09-26  Rob McMullen  <robm@users.sourceforge.net>

	* Released peppy-0.12.0 "Mars Ice"
	* added new major modes to correspond with editra languages (bug #776)
	* customizable major mode filename extensions now available in
	preferences (bug #766)
	* fixed bug in spell checker that causes freezes when deleting large
	blocks of text (bug #775)
	* fixed style editor in py2exe (bug #774)
	* restructured Major Mode menu to prefer display of common major modes
	rather than all major modes (bug #771)

2009-09-21  Rob McMullen  <robm@users.sourceforge.net>

	* Released peppy-0.11.53