@@ -1,6 +1,7 @@
 2009-11-16  Rob McMullen  <robm@users.sourceforge.net>
 
 	* Released peppy-0.13.1
+	* now includes PDF of user manual
 	* fixed replace to stop after wrapping around to start (bug #471)
 	* fixed bug when searching for non-existent CTAG (bug #753)
 	* fixed bug in help browser when doc doesn't exist (bug #797)
